--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<h1>Test</h1>
 <div class="post">
     <div class="state">
         <i class="fa fa-{{ post.fa }}" aria-hidden="true"></i>
