--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,17 +4,17 @@ layout: default
 <h1>Test</h1>
 <div class="post">
     <div class="state">
-        <i class="fa fa-{{ post.fa }}" aria-hidden="true"></i>
+        <i class="fa fa-" aria-hidden="true"></i>
     </div>
     <div class="boxdatetime">
-        <span class="date">{{ post.date | date_to_long_string }}</span>
-        <span class="time">{{ post.time }}</span>
+        <span class="date">{{ page.date | date_to_long_string }}</span>
+        <span class="time">{{ date_to_string }}</span>
     </div>
-    <h3 class="boxtitle" title="{{ post.title }}">
-        {{ post.title }}
+    <h3 class="boxtitle" title="{{ page.title }}">
+        {{ page.title }}
     </h3>
     <div class="boxcontent">
-        {{ post.content }}
+        {{ content }}
     </div>
 </div>
 
