protocol agnostic path

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
 			<a href="http://status.netways.de/atom.xml" target="_blank"><i class="fa fa-fw fa-rss"></i></a>
 		</div>
 		<div class="boxlogo lfloat">
-			<img src="http://status.netways.de/netways-logo.svg" alt="NETWAYS">
+			<img src="//status.netways.de/netways-logo.svg" alt="NETWAYS">
 		</div>
 	</div>
 </header>
