page instead of post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@ layout: default
             <div class="posts">
         		<div class="post">
             		<div class="state">
-                		<i class="fa fa-{{ post.fa }}" aria-hidden="true"></i>
+                		<i class="fa fa-{{ page.fa }}" aria-hidden="true"></i>
             		</div>
         			<div class="boxdatetime">
         				<span class="date">{{ page.date | date_to_long_string }}</span>
